Once I set the project JDK from 20 to 21, we can use removeLast() again!